fixed about and contact pages getting cut off on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,3 @@ body {
     flex: 0 0 auto;
   }
 }
-
-blah {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
